@@ -18,10 +18,17 @@
 <iconList>
 <icon>
 <mimetype>image/png</mimetype>
-<width>236</width>
-<height>276</height>
+<width>256</width>
+<height>256</height>
 <depth>32</depth>
-<url>/pixmaps/network-light.png</url>
+<url>/pixmaps/network-light-256x256.png</url>
+</icon>
+<icon>
+<mimetype>image/png</mimetype>
+<width>22</width>
+<height>22</height>
+<depth>32</depth>
+<url>/pixmaps/network-light-22x22.png</url>
 </icon>
 </iconList>
 <serviceList>
